--- a/career.html
+++ b/career.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Home Page DgnRavePay</title>
+    <title>Career Page DgnRavePay</title>
 </head>
 
 <body>
@@ -38,8 +38,21 @@
                 <div class="text-center mb-10">
                     <h1
                         class="capitalize leading-[1.2] mb-5 text-center mb-5 text-5xl md:text-6xl lg:text-[74px] leading-[1] bg-clip-text text-transparent bg-gradient-to-r from-black to-primary">
-                        We’re closer to you across Nigeria.<br />
-                        Reach us at any of our state offices</h1>
+                        Build the Future of Finance With Us.
+                    </h1>
+                    <p class="font-medium text-base md:text-lg">We’re not just building financial technology, we’re
+                        creating opportunities for millions of
+                        people. Join a team where your impact goes beyond work.
+                    </p>
+                    <div class="flex flex-col md:flex-row items-center justify-center gap-3 mt-10">
+                        <a href="#"
+                            class="w-full md:w-auto bg-primary text-white py-3 px-4 hover:bg-primary/70 transition-all rounded-lg border-b-2 border-primary-2 md:text-base font-medium shadow-lg">
+                            Explore Opportunities
+                        </a>
+                        <a href="#"
+                            class="bg-primary/5 w-full md:w-auto px-4 py-4 rounded-xl border border-primary-2 hover:bg-amber-100 transition-all">Discover
+                            Our Culture</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -49,133 +62,67 @@
         </div>
     </section>
 
-    <!-- Dark Section -->
-    <section class="bg-accent-black relative -z-[0]">
-        <div class="container mx-auto max-w-6xl px-5 md:px-10 py-20 md:py-28">
-            <div class="text-center">
-                <h2 class="text-white mb-5 text-3xl md:text-5xl lg:text-[48px] leading-[1.2]">
-                    Want to meet our team in your state? <br />
-                    Come say hello near you.
-                </h2>
-                <div class="mt-5 inline-flex bg-white rounded-full p-2">
-                    <button class="border border-primary px-3 py-2 rounded-full flex gap-2 fount-semibold">
-                        <img src="./assets/images/round-nigerian-flag-of-nigeria-vector.jpg" alt=""
-                            class="w-5 rounded-full">
-                        <span>Lagos</span>
-                    </button>
-                    <button class="px-3 py-2 rounded-full flex gap-2 fount-semibold">
-                        <img src="./assets/images/round-nigerian-flag-of-nigeria-vector.jpg" alt=""
-                            class="w-5 rounded-full">
-                        <span>Abakaliki</span>
-                    </button>
-                    <button class="px-3 py-2 rounded-full flex gap-2 fount-semibold">
-                        <img src="./assets/images/round-nigerian-flag-of-nigeria-vector.jpg" alt=""
-                            class="w-5 rounded-full">
-                        <span>Abuja</span>
-                    </button>
-                </div>
+    <section class="pb-20">
+        <div class="container mx-auto max-w-6xl px-5 md:px-10 py-10">
+            <div class="md:grid md:grid-cols-2 md:items-center justify-between">
+                <h3 class=" mb-3 text-3xl md:text-5xl lg:text-[48px] leading-[1]">Don’t Just Work. Disrupt.
+                    Redefine Fintech with
+                    DgnRavePay.</h3>
+                <p class="md:font-medium text-base md:text-lg">We’re on a mission to break barriers in
+                    digital payments,
+                    savings, and global financial access. At DgnRavePay,
+                    you’re not hired to fit in you’re here to stand out. Build
+                    revolutionary products, grow in a culture that thrives on
+                    bold ideas, and make history with us.</p>
             </div>
-            <div class="grid grid-cols-7 mt-20">
-                <div class="col-span-3 text-white font-medium space-y-5">
-                    <div class="bg-primary rounded-xl p-5 divide-y divide-white/30">
-                        <p class="flex items-center gap-2 pb-5">
-                            <img src="./assets/images/round-nigerian-flag-of-nigeria-vector.jpg" alt=""
-                                class="w-10 rounded-full">
-                            <span class="text-lg md:text-xl font-semibold">Lagos ( Headquarters)</span>
-                        </p>
-                        <ul class="pt-5 space-y-3">
-                            <li class="flex gap-3 items-center">
-                                <span class="bg-primary-2/80 p-3 flex items-center justify-center rounded-full">
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                        stroke-width="1.5" stroke="currentColor" class="size-5">
-                                        <path stroke-linecap="round" stroke-linejoin="round"
-                                            d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-                                        <path stroke-linecap="round" stroke-linejoin="round"
-                                            d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z" />
-                                    </svg>
-                                </span>
-                                <p>No. 4, Bashiru Olusesi Street, off
-                                    Conservation Road, Lekki Please 2, Lagos
-                                    State.</p>
-                            </li>
-                            <li class="flex gap-3 items-center">
-                                <span class="bg-primary-2/80 p-3 flex items-center justify-center rounded-full">
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                        stroke-width="1.5" stroke="currentColor" class="size-5">
-                                        <path stroke-linecap="round" stroke-linejoin="round"
-                                            d="M21.75 9v.906a2.25 2.25 0 0 1-1.183 1.981l-6.478 3.488M2.25 9v.906a2.25 2.25 0 0 0 1.183 1.981l6.478 3.488m8.839 2.51-4.66-2.51m0 0-1.023-.55a2.25 2.25 0 0 0-2.134 0l-1.022.55m0 0-4.661 2.51m16.5 1.615a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V8.844a2.25 2.25 0 0 1 1.183-1.981l7.5-4.039a2.25 2.25 0 0 1 2.134 0l7.5 4.039a2.25 2.25 0 0 1 1.183 1.98V19.5Z" />
-                                    </svg>
-                                </span>
-                                <a href="mailto:hello@dgnravepay.com">
-                                    <p>hello@dgnravepay.com</p>
-                                </a>
-                            </li>
-                            <li class="flex gap-3 items-center">
-                                <span class="bg-primary-2/80 p-3 flex items-center justify-center rounded-full">
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                        stroke-width="1.5" stroke="currentColor" class="size-5">
-                                        <path stroke-linecap="round" stroke-linejoin="round"
-                                            d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
-                                    </svg>
-                                </span>
-                                <a href="tel:+234-916-000-1561">
-                                    <p>+234 916 000 1561</p>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="bg-primary rounded-xl p-5 divide-y divide-white/30">
-                        <p class="flex items-center gap-2 pb-5">
-                            <img src="./assets/images/round-nigerian-flag-of-nigeria-vector.jpg" alt=""
-                                class="w-10 rounded-full">
-                            <span class="text-lg md:text-xl font-semibold">Lagos ( Branch)</span>
-                        </p>
-                        <ul class="pt-5 space-y-3">
-                            <li class="flex gap-3 items-center">
-                                <span class="bg-primary-2/80 p-3 flex items-center justify-center rounded-full">
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                        stroke-width="1.5" stroke="currentColor" class="size-5">
-                                        <path stroke-linecap="round" stroke-linejoin="round"
-                                            d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-                                        <path stroke-linecap="round" stroke-linejoin="round"
-                                            d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z" />
-                                    </svg>
-                                </span>
-                                <p>No 110, Adeniran Ogunsanya Street,
-                                    Surulere, Lagos State</p>
-                            </li>
-                            <li class="flex gap-3 items-center">
-                                <span class="bg-primary-2/80 p-3 flex items-center justify-center rounded-full">
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                        stroke-width="1.5" stroke="currentColor" class="size-5">
-                                        <path stroke-linecap="round" stroke-linejoin="round"
-                                            d="M21.75 9v.906a2.25 2.25 0 0 1-1.183 1.981l-6.478 3.488M2.25 9v.906a2.25 2.25 0 0 0 1.183 1.981l6.478 3.488m8.839 2.51-4.66-2.51m0 0-1.023-.55a2.25 2.25 0 0 0-2.134 0l-1.022.55m0 0-4.661 2.51m16.5 1.615a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V8.844a2.25 2.25 0 0 1 1.183-1.981l7.5-4.039a2.25 2.25 0 0 1 2.134 0l7.5 4.039a2.25 2.25 0 0 1 1.183 1.98V19.5Z" />
-                                    </svg>
-                                </span>
-                                <a href="mailto:hello@dgnravepay.com">
-                                    <p>hello@dgnravepay.com</p>
-                                </a>
-                            </li>
-                            <li class="flex gap-3 items-center">
-                                <span class="bg-primary-2/80 p-3 flex items-center justify-center rounded-full">
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                        stroke-width="1.5" stroke="currentColor" class="size-5">
-                                        <path stroke-linecap="round" stroke-linejoin="round"
-                                            d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
-                                    </svg>
-                                </span>
-                                <a href="tel:+234-916-000-5387">
-                                    <p>+234 9160005387</p>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-span-4"></div>
+        </div>
+        <div class="mx-auto max-w-7xl px-5 md:px-10 grid grid-cols-5 gap-3 md:gap-5 items-center">
+            <div class="flex gap-3 md:gap-5 flex-col">
+                <img src="./assets/images/article 3.jpg" alt="" class="object-cover w-full aspect-video rounded-md">
+                <img src="./assets/images/article 2.jpg" alt="" class="object-cover w-full aspect-[9/10] rounded-md">
             </div>
+            <img src="./assets/images/article 1.jpg" class="col-span-3 object-cover aspect-video w-full rounded-xl" />
+            <img src="./assets/images/article 3.jpg" alt="" class="object-cover w-full aspect-square rounded-lg">
         </div>
     </section>
 
+    <section class="bg-accent-black">
+        <div class="container mx-auto max-w-6xl px-5 md:px-10">
+            <div class="py-20 md:pt-28 flex flex-col justify-center text-center">
+                <h3 class="text-white mb-5 text-3xl md:text-5xl lg:text-[48px] leading-[1]">We’re just getting started
+                </h3>
+                <p class="text-white">
+                    There’s so much we have to accomplish. Here are a few milestones we’ve crossed so far
+                </p>
+            </div>
+            <div class="text-center grid grid-cols-4 gap-5 border-t border-white/50 p-10">
+                <div class="text-neutral-200 p-10">
+                    <h6
+                        class="text-4xl font-bold text-transparent bg-gradient-to-br from-neutral-100 to-neutral-700 bg-clip-text">
+                        4.7</h6>
+                    <span class="uppercase text-xs md:text-sm">Stars on App stores</span>
+                </div>
+                <div class="text-neutral-200 p-10">
+                    <h6
+                        class="text-4xl font-bold text-transparent bg-gradient-to-br from-neutral-100 to-neutral-700 bg-clip-text">
+                        2M+</h6>
+                    <span class="uppercase text-xs md:text-sm">REGISTERED USERS</span>
+                </div>
+                <div class="text-neutral-200 p-10">
+                    <h6
+                        class="text-4xl font-bold text-transparent bg-gradient-to-br from-neutral-100 to-neutral-700 bg-clip-text">
+                        500,000+</h6>
+                    <span class="uppercase text-xs md:text-sm">Micro business users</span>
+                </div>
+                <div class="text-neutral-200 p-10">
+                    <h6
+                        class="text-4xl font-bold text-transparent bg-gradient-to-br from-neutral-100 to-neutral-700 bg-clip-text">
+                        100+</h6>
+                    <span class="uppercase text-xs md:text-sm">employees</span>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Dark Footer -->
     <section class="bg-black relative -z-[0]">
