Added more pages

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Home Page DgnRavePay</title>
+    <title>Contact Page DgnRavePay</title>
 </head>
 
 <body>
@@ -75,8 +75,8 @@
                     </button>
                 </div>
             </div>
-            <div class="grid grid-cols-7 mt-20">
-                <div class="col-span-3 text-white font-medium space-y-5">
+            <div class="md:grid md:grid-cols-7 mt-20">
+                <div class="md:col-span-3 text-white font-medium space-y-5">
                     <div class="bg-primary rounded-xl p-5 divide-y divide-white/30">
                         <p class="flex items-center gap-2 pb-5">
                             <img src="./assets/images/round-nigerian-flag-of-nigeria-vector.jpg" alt=""
@@ -171,7 +171,9 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-span-4"></div>
+                <div class="md:col-span-4">
+                    <img src="./assets/images/nigeria map.png" alt="" class="w-full">
+                </div>
             </div>
         </div>
     </section>
