--- a/savings.html
+++ b/savings.html
@@ -70,7 +70,7 @@
             <div class="mb-10 px-5 md:px-10">
                 <h2 class="text-center mb-5 text-5xl md:text-6xl lg:text-[74px] leading-[1]">
                     Why People Choose DgnRavePay</h2>
-                <div class="md:grid md:grid-cols-3 gap-5 mt-10">
+                <div class="grid md:grid-cols-3 gap-5 mt-10">
                     <div class="bg-primary rounded-xl">
                         <div class="px-4 py-5 md:px-5 md:py-6">
                             <h6 class="font-bold text-xl md:text-2xl mb-1">Save Your Way</h6>
