--- a/virtual.html
+++ b/virtual.html
@@ -84,7 +84,8 @@
                         Mastercard?
                     </h2>
                     <div class="flex gap-3 text-white font-medium mt-10 flex-wrap whitespace-nowrap">
-                        <div class="rounded-full px-2 py-3 bg-white/5 border border-white/10 flex items-center gap-2">
+                        <div
+                            class="rounded-full p-2 md:py-3 tex-sm md:text-base bg-white/5 border border-white/10 flex items-center gap-2">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="size-6 fill-primary stroke-primary">
                                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -92,7 +93,8 @@
                             </svg>
                             <span>Fund Easily in Naira</span>
                         </div>
-                        <div class="rounded-full px-2 py-3 bg-white/5 border border-white/10 flex items-center gap-2">
+                        <div
+                            class="rounded-full p-2 md:py-3 tex-sm md:text-base bg-white/5 border border-white/10 flex items-center gap-2">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="size-6 fill-primary stroke-primary">
                                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -100,7 +102,8 @@
                             </svg>
                             <span>Multiple Cards, One App</span>
                         </div>
-                        <div class="rounded-full px-2 py-3 bg-white/5 border border-white/10 flex items-center gap-2">
+                        <div
+                            class="rounded-full p-2 md:py-3 tex-sm md:text-base bg-white/5 border border-white/10 flex items-center gap-2">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="size-6 fill-primary stroke-primary">
                                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -108,7 +111,8 @@
                             </svg>
                             <span>Withdraw Back Anytime</span>
                         </div>
-                        <div class="rounded-full px-2 py-3 bg-white/5 border border-white/10 flex items-center gap-2">
+                        <div
+                            class="rounded-full p-2 md:py-3 tex-sm md:text-base bg-white/5 border border-white/10 flex items-center gap-2">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="size-6 fill-primary stroke-primary">
                                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -116,7 +120,8 @@
                             </svg>
                             <span>Smart Spending Insights</span>
                         </div>
-                        <div class="rounded-full px-2 py-3 bg-white/5 border border-white/10 flex items-center gap-2">
+                        <div
+                            class="rounded-full p-2 md:py-3 tex-sm md:text-base bg-white/5 border border-white/10 flex items-center gap-2">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="size-6 fill-primary stroke-primary">
                                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -124,7 +129,8 @@
                             </svg>
                             <span>Real-Time Alerts</span>
                         </div>
-                        <div class="rounded-full px-2 py-3 bg-white/5 border border-white/10 flex items-center gap-2">
+                        <div
+                            class="rounded-full p-2 md:py-3 tex-sm md:text-base bg-white/5 border border-white/10 flex items-center gap-2">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="size-6 fill-primary stroke-primary">
                                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -132,7 +138,8 @@
                             </svg>
                             <span>Merchant Management</span>
                         </div>
-                        <div class="rounded-full px-2 py-3 bg-white/5 border border-white/10 flex items-center gap-2">
+                        <div
+                            class="rounded-full p-2 md:py-3 tex-sm md:text-base bg-white/5 border border-white/10 flex items-center gap-2">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="size-6 fill-primary stroke-primary">
                                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -140,7 +147,8 @@
                             </svg>
                             <span>Advanced Security</span>
                         </div>
-                        <div class="rounded-full px-2 py-3 bg-white/5 border border-white/10 flex items-center gap-2">
+                        <div
+                            class="rounded-full p-2 md:py-3 tex-sm md:text-base bg-white/5 border border-white/10 flex items-center gap-2">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="size-6 fill-primary stroke-primary">
                                 <path stroke-linecap="round" stroke-linejoin="round"
