--- a/career.html
+++ b/career.html
@@ -90,7 +90,7 @@
         <div class="container mx-auto max-w-6xl px-5 md:px-10 py-10">
             <div class="lg:grid lg:grid-cols-2 space-y-10 lg:space-y-0">
                 <h3 class="mb-3 text-3xl md:text-5xl lg:text-[48px] leading-[1]">Our core values</h3>
-                <div class="md:grid md:grid-cols-2 gap-5">
+                <div class="grid md:grid-cols-2 gap-5">
                     <article class="rounded-xl bg-gradient-to-br from-amber-50 to-amber-200">
                         <div class="p-5 md:p-10">
                             <span class="text-xs md:text-sm text-stone-300">001</span>
@@ -143,7 +143,7 @@
         <div class="container mx-auto max-w-6xl px-5 md:px-10 py-10">
             <div class="lg:grid lg:grid-cols-2 space-y-10 lg:space-y-0">
                 <h3 class="mb-3 text-3xl md:text-5xl lg:text-[48px] leading-[1]">Perks we enjoy</h3>
-                <div class="md:grid md:grid-cols-2 gap-5">
+                <div class="grid md:grid-cols-2 gap-5">
                     <article class="rounded-xl bg-gradient-to-br from-rose-50 to-rose-200">
                         <div class="p-5 md:p-7">
                             <img src="./assets/images/logo.svg" alt="" class="h-16 md:h-24 lg:h-32 mb-5">
