Added all pages

--- a/career-detail.html
+++ b/career-detail.html
@@ -58,7 +58,7 @@
                 </li>
             </ul>
         </div>
-        <div class="col-span-5">
+        <div class="col-span-7">
             <!-- Header Section -->
             <div class="mb-10">
                 <div>
@@ -274,16 +274,15 @@
                 </ul>
 
                 <div class="mt-8">
-                    <button
-                        class="bg-primary hover:bg-primary-2 text-white font-medium py-3 px-8 rounded-lg transition duration-200 text-lg flex items-center gap-2">
+                    <a href="#"
+                        class="bg-primary text-white py-2 px-4 md:py-4 md:px-5 hover:bg-primary/70 transition-all rounded-lg border-b-2 border-primary-2 md:text-base font-medium shadow-lg inline-flex items-center gap-2">
                         <span>Apply for this role</span>
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="size-4 fill-white">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
                         </svg>
-
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
