--- a/career.html
+++ b/career.html
@@ -91,42 +91,42 @@
             <div class="lg:grid lg:grid-cols-2 space-y-10 lg:space-y-0">
                 <h3 class="mb-3 text-3xl md:text-5xl lg:text-[48px] leading-[1]">Our core values</h3>
                 <div class="grid md:grid-cols-2 gap-5">
-                    <article class="rounded-xl bg-gradient-to-br from-amber-50 to-amber-200">
+                    <article class="rounded-xl bg-gradient-to-br from-amber-50 to-amber-200 overflow-hidden">
                         <div class="p-5 md:p-10">
                             <span class="text-xs md:text-sm text-stone-300">001</span>
                             <h6 class="font-bold text-base md:text-lg">Innovation with Purpose</h6>
                         </div>
                         <img src="./assets/images/cards.png" alt="" class="h-36 md:h-44 lg:h-56 mx-auto">
                     </article>
-                    <article class="rounded-xl bg-gradient-to-br from-fuchsia-50 to-fuchsia-200">
+                    <article class="rounded-xl bg-gradient-to-br from-fuchsia-50 to-fuchsia-200 overflow-hidden">
                         <div class="p-5 md:p-10">
                             <span class="text-xs md:text-sm text-stone-300">002</span>
                             <h6 class="font-bold text-base md:text-lg">Trust and Integrity</h6>
                         </div>
                         <img src="./assets/images/pie chart.svg" alt="" class="h-36 md:h-44 lg:h-56 mx-auto">
                     </article>
-                    <article class="rounded-xl bg-gradient-to-br from-violet-50 to-violet-200">
+                    <article class="rounded-xl bg-gradient-to-br from-violet-50 to-violet-200 overflow-hidden">
                         <div class="p-5 md:p-10">
                             <span class="text-xs md:text-sm text-stone-300">003</span>
                             <h6 class="font-bold text-base md:text-lg">Excellence at Scale</h6>
                         </div>
                         <img src="./assets/images/pie chart.svg" alt="" class="h-36 md:h-44 lg:h-56 mx-auto">
                     </article>
-                    <article class="rounded-xl bg-gradient-to-br from-sky-50 to-sky-200">
+                    <article class="rounded-xl bg-gradient-to-br from-sky-50 to-sky-200 overflow-hidden">
                         <div class="p-5 md:p-10">
                             <span class="text-xs md:text-sm text-stone-300">004</span>
                             <h6 class="font-bold text-base md:text-lg">Empowerment & Inclusion</h6>
                         </div>
                         <img src="./assets/images/pie chart.svg" alt="" class="h-36 md:h-44 lg:h-56 mx-auto">
                     </article>
-                    <article class="rounded-xl bg-gradient-to-br from-stone-50 to-stone-200">
+                    <article class="rounded-xl bg-gradient-to-br from-stone-50 to-stone-200 overflow-hidden">
                         <div class="p-5 md:p-10">
                             <span class="text-xs md:text-sm text-stone-300">005</span>
                             <h6 class="font-bold text-base md:text-lg">Empowerment & Inclusion</h6>
                         </div>
                         <img src="./assets/images/account credited.svg" alt="" class="h-36 md:h-44 lg:h-56 mx-auto">
                     </article>
-                    <article class="rounded-xl bg-gradient-to-br from-lime-50 to-lime-200">
+                    <article class="rounded-xl bg-gradient-to-br from-lime-50 to-lime-200 overflow-hidden">
                         <div class="p-5 md:p-10">
                             <span class="text-xs md:text-sm text-stone-300">006</span>
                             <h6 class="font-bold text-base md:text-lg">Sustainable Growth</h6>
